# milesianpy

./: .gitignore  LICENSE  MANIFEST.in  README.md  basic_parser_tests.py  calculation_parser_tests.py  makefile  number_parser_tests.py  pyproject.toml  readme.md  setup.py
calculations/: no_variable_calculation.py
milesianpy.egg-info/: PKG-INFO  SOURCES.txt
parsers/: basic_parser.py  calculation_parser.py  number_parser.py  operator_parser.py
src/calculations/: no_variable_calculation.py
src/milesianpy/: common_operators.py
src/milesianpy/calculations/: common_functions.py  no_variable_calculation.py  single_variable_calculation.py
src/milesianpy/error_handling/: bracket_error.py  decimal_error.py  invalid_character_error.py  operator_error.py
src/milesianpy/parsers/: basic_parser.py  number_parser.py  variable_parser.py
src/parsers/: basic_parser.py  number_parser.py  operator_parser.py
tests/: test_runner.py
tests/calculation_tests/: no_variable_calculation_tests.py  single_variable_calculation_tests.py
tests/parser_tests/: basic_parser_tests.py  calculation_parser_tests.py  number_parser_tests.py  operator_parser_tests.py  variable_parser_tests.py
tests/test_data/: basic_parser_testing_data.json  number_parser_testing_data.json  operator_parser_testing_data.json
tests/test_data/calculation_data/: no_variable_calculation_data.json  single_variable_calculation_data.json
tests/test_data/parsing_data/: basic_parser_testing_data.json  number_parser_testing_data.json  operator_parser_testing_data.json  variable_parser_testing_data.json
