[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "project"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[project]
name = "milesianpy"
version = "0.0.1"
authors = [
  { name="Anna St. Germain", email="anna.stgermain885@gmail.com" },
]
description = "A math calculation package."
readme = "README.md"
requires-python = ">=3.8"